[SF-015]: ADding Bulk operations
